<resources>
    <string name="app_name">Wordle</string>
    <string name="wordle">Wordle</string>
    <string name="enter_word">Enter word</string>
    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="u">U</string>
    <string name="i">I</string>
    <string name="p">P</string>
    <string name="o">O</string>
    <string name="backspace">backSpace</string>
    <string name="view25">view25</string>
    <string name="view24">view24</string>
    <string name="view23">view23</string>
    <string name="view22">view22</string>
    <string name="view21">view21</string>
    <string name="view20">view20</string>
    <string name="view19">view19</string>
    <string name="view18">view18</string>
    <string name="view17">view17</string>
    <string name="view16">view16</string>
    <string name="view15">view15</string>
    <string name="view14">view14</string>
    <string name="view13">view13</string>
    <string name="view12">view12</string>
    <string name="view11">view11</string>
    <string name="view10">view10</string>
    <string name="view9">view9</string>
    <string name="view8">view8</string>
    <string name="view7">view7</string>
    <string name="view6">view6</string>
    <string name="view5">view5</string>
    <string name="view4">view4</string>
    <string name="view3">view3</string>
    <string name="view2">view2</string>
    <string name="view1">view1</string>
    <string name="congrat_you_won">Congrat You Won!!!</string>
    <string name="a">A</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="z">Z</string>
    <string name="x">X</string>
    <string name="c">C</string>
    <string name="v">V</string>
    <string name="b">B</string>
    <string name="n">N</string>
    <string name="m">M</string>
    <string name="submit">Submit</string>
    <string name="history">history</string>
    <string name="recyclerview">recyclerview</string>
    <string name="delete">Delete</string>
    <string name="tries_3">Tries: 3</string>
    <string name="result_win">Result: Win</string>
    <string name="word_apple">Word: apple</string>
    <string name="date_played">date played</string>
    <string name="game_history_list">Game History List</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loginEmail">Email</string>
    <string name="error_while_logging_in">Error while logging in</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="fetch_user">fetch user</string>
    <string name="next">next</string>
    <string name="question">question</string>
    <string name="u_is_not_in_the_word_in_any_spot">U is not in the word in any spot.</string>
    <string name="back">back</string>
    <string name="wordle_logo">wordle logo</string>
    <string name="email_address">Email Address:</string>
    <string name="name">Name:</string>
    <string name="delete_account">Delete Account</string>
    <string name="_2025_04_17_19_30">2025-04-17 19:30</string>
    <string name="game_history">Game History</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="roles">Roles</string>
</resources>
