<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/menu"
        app:showAsAction="ifRoom"
        android:id="@+id/menu"
        android:icon="@drawable/menu">

        <menu>
            <item
                android:id="@+id/profile"
                android:title="@string/profile"
                app:showAsAction="never"
                android:icon="@drawable/user"/>
            <item
                android:id="@+id/roles"
                android:title="@string/roles"
                app:showAsAction="never"
                android:icon="@drawable/information"/>
            <item
                android:id="@+id/logout"
                android:title="@string/logout"
                app:showAsAction="never"
                android:icon="@drawable/lgout"/>
        </menu>

    </item>

</menu>
